DisabledActionNotifier: Prevent null dereferences

This prevents a crash on startup where it tries to delete a null
QShortcut because it didn't check if the QShortcut actually exists in
the QHash.

BUG: 485089